2007-08-27  Sayamindu Dasgupta <sayamindu@gmail.com>
		* src/file-manager/fm-directory-view.c:
		* libnautilus-private/nautilus-desktop-link.c:
		* libnautilus-private/nautilus-global-preferences.c:
	Fix crash if /apps/nautilus/desktop/global_items_visible 
	is disabled after a global desktop item has been clicked.

2007-08-26  Sayamindu Dasgupta <sayamindu@gmail.com>
		* libnautilus-private/apps_nautilus_preferences.schemas.in:
		* libnautilus-private/nautilus-global-preferences.c:
		* libnautilus-private/nautilus-global-preferences.h:
		* libnautilus-private/nautilus-lockdown-manager.c:
	General cleanup and polish. Renamed Gconf key
	/apps/nautilus/lockdown/allowed_uris to 
	/apps/nautilus/lockdown/allowed_paths to avoid confusion.


2007-08-04  Sayamindu Dasgupta <sayamindu@gmail.com>
		* nautilus-pathbar.c:
		(nautilus_path_bar_update_path):
		* nautilus-window-manage-views.c:
		(update_up_button):
	Pathbar should not show restricted directories, 
	and the "Up" button/menu item should be disabled in 
	some cases.

2007-08-04	Sayamindu Dasgupta <sayamindu@gmail.com>
		* libnautilus-private/nautilus-lockdown-manager.[ch]:
		* src/nautilus-application.c:
		* src/nautilus-location-entry.c:
		* src/file-manager/fm-tree-model.c:
		* src/file-manager/fm-directory-view.c:
		* src/nautilus-navigation-window.c:
		* src/nautilus-spatial-window.c:
		* libnautilus-private/apps_nautilus_preferences.schemas.in:
		* libnautilus-private/nautilus-global-preferences.[ch]:
	Added support for restricted filesystem view (part of Summer of 
	Code 2007)

2007-08-04	Sayamindu Dasgupta <sayamindu@gmail.com>
		* libnautilus-private/nautilus-lockdown-manager.[ch]:
		* libnautilus-private/Makefile.am:
	Added a singleton (NautilusLockdownManager) to manage all 
	lockdown related settings

2007-07-31	Sayamindu Dasgupta <sayamindu@gmail.com>

		* src/file-manager/fm-directory-view.c: 
		(file_list_all_are_folders):	  
		* libnautilus-private/nautilus-desktop-link.[ch]: