@@ -9433,19 +9433,9 @@ fm_directory_view_accepts_dragged_files (FMDirectoryView *view)
 gboolean
 fm_directory_view_should_show_file (FMDirectoryView *view, NautilusFile *file)
 {
-    gchar *uri;
-    uri = nautilus_file_get_uri(file);
-    
-    if (!nautilus_lockdown_manager_is_uri_allowed(nautilus_lockdown_manager_get(), uri)) {
-        g_free (uri);
-        return FALSE;
-    }
-    else {
-        g_free (uri);
-        return nautilus_file_should_show (file, 
-		    			  view->details->show_hidden_files, 
-			    		  view->details->show_backup_files);
-    }
+    return nautilus_file_should_show (file, 
+                      view->details->show_hidden_files, 
+                      view->details->show_backup_files);
 }
 
 static gboolean
